# Coredjango

./: .editorconfig  .flake8  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
core/core/utils/: collections.py  misc.py  settings.py
core/local/: settings.dev.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/folder/: settings.dev.py
